--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -3,32 +3,25 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "{{cookiecutter.project_slug}}"
-version = "{{cookiecutter.version}}"
-description = "{{cookiecutter.project_short_description}}"
-readme = "README.rst"
-authors = [
-  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
-]
-maintainers = [
-  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
-]
-classifiers = [
-
-]
-license = {text = "{{cookiecutter.open_source_license}}"}
 dependencies = [
   {% if cookiecutter.command_line_interface.lower() == "typer" -%}
   "typer"
 {%- endif %}
+]name = "{{cookiecutter.project_slug}}"
+version = "0.1.0"
+description = "{{cookiecutter.project_short_description}}"
+readme = "README.md"
+authors = [
+    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
 ]
+license = { text = "{{cookiecutter.open_source_license}}" }
 
 [project.optional-dependencies]
 dev = [
-    "coverage",  # testing
-    "mypy",  # linting
-    "pytest",  # testing
-    "ruff"  # linting
+    "coverage", # testing
+    "mypy",     # linting
+    "pytest",   # testing
+    "ruff",     # linting
 ]
 
 [project.urls]
@@ -38,12 +31,14 @@ changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog
 homepage = "https://github.com/{{cookiecutter.__gh_slug}}"
 
 [tool.setuptools]
-package-dir = {"" = "src"}
+package-dir = { "" = "src" }
 
 [tool.setuptools.package-data]
-"*" = ["*.*"]
+
 
 {% if cookiecutter.command_line_interface == 'Yes' %}
+"*" = ["*.*"]
+"*" = ["*.*"]
 [project.scripts]
 {{cookiecutter.slug}} = "{{cookiecutter.slug}}.cli:app"
 {% endif %}
@@ -65,4 +60,3 @@ warn_no_return = true
 module = "tests.*"
 allow_untyped_defs = true
 disable_error_code = "attr-defined"
-
